--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,68 @@
-/* You can add global styles to this file, and also import other style files */
+// Fonts
+@import "https://fonts.googleapis.com/css2?family=Ibarra+Real+Nova:wght@400..700&display=swap";
+
+// Icons
+@import "../src/assets/icons/style.css";
+
+// Theming variables
+$primary: #5051f9;
+$body-bg: #0d1117;
+$body-color: #b7b7b7;
+$font-family: "Ibarra Real Nova", serif;
+$link-decoration: none;
+
+// Custom styles goes here
+@import "../node_modules/bootstrap/scss/bootstrap.scss";
+
+// Sidebar styles goes here
+.primary-sidebar {
+  height: 100%;
+  flex: 0 0 250px;
+  max-width: 250px;
+  background-color: #14171f;
+
+  .menu {
+    &-list {
+      display: flex;
+      flex-direction: column;
+      gap: 1rem;
+      flex-grow: 1;
+      padding: 10px 20px;
+      margin-bottom: 0;
+      overflow-y: auto;
+      overflow-x: hidden;
+      list-style: none;
+    }
+    &-item {
+      padding: 12px 10px;
+      background-color: #0d1117;
+      border-radius: 8px;
+      cursor: pointer;
+      transition: 0.4s all;
+
+      &.active,
+      &:hover {
+        background-color: $primary;
+
+        .menu-link {
+          color: $white;
+        }
+      }
+    }
+    &-link {
+      display: flex;
+      align-items: center;
+      gap: 0.5rem;
+      color: $body-color;
+    }
+
+    &-icon {
+      font-size: 18px;
+    }
+  }
+}
+
+.app-title {
+  font-size: 22px;
+  padding: 20px 20px 10px;
+}
