--- a/src/app/components/organisams/header/header.component.html
+++ b/src/app/components/organisams/header/header.component.html
@@ -1,1 +1,7 @@
-<p>headers works!</p>
+<header class="p-3">
+  <div class="d-flex align-items-center justify-content-between gap-3">
+    <h5 class="page-title mb-0">Timeline</h5>
+    <!-- Search bar -->
+    <app-search-bar class="flex-shrink-0"></app-search-bar>
+  </div>
+</header>
