--- a/src/app/components/templates/time-voyage/time-voyage.component.html
+++ b/src/app/components/templates/time-voyage/time-voyage.component.html
@@ -1,4 +1,4 @@
 <div class="d-flex flex-column h-100 overflow-hidden">
   <app-headers></app-headers>
-  <app-time-interface></app-time-interface>
+  <app-time-interface class="d-block flex-grow-1 overflow-horizontal p-3"></app-time-interface>
 </div>
