--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <div class="d-flex vh-100 overflow-hidden">
   <app-side-bar class="primary-sidebar"></app-side-bar>
-  <main class="flex-grow-1">
+  <main class="flex-grow-1 overflow-hidden">
     <router-outlet></router-outlet>
   </main>
 </div>
