--- a/src/app/components/atoms/search-bar/search-bar.component.html
+++ b/src/app/components/atoms/search-bar/search-bar.component.html
@@ -1,1 +1,9 @@
-<p>search-bar works!</p>
+<div class="search-bar">
+  <input
+    type="search"
+    class="form-control"
+    id="searchVoyage"
+    placeholder="Search Here"
+  />
+  <label for="searchVoyage" class="icon-search"></label>
+</div>
