--- a/src/app/components/molecules/timeline/timeline.component.html
+++ b/src/app/components/molecules/timeline/timeline.component.html
@@ -1,1 +1,3 @@
-<p>timeline works!</p>
+<div class="timeline-grid">
+    <app-event-card class="flex-shrink-0" *ngFor="let event of [1,1,1,1,1,1,1]"></app-event-card>
+</div>
