--- a/src/assets/icons/style.css
+++ b/src/assets/icons/style.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'timeline-voyage';
-  src:  url('fonts/timeline-voyage.eot?gezorn');
-  src:  url('fonts/timeline-voyage.eot?gezorn#iefix') format('embedded-opentype'),
-    url('fonts/timeline-voyage.ttf?gezorn') format('truetype'),
-    url('fonts/timeline-voyage.woff?gezorn') format('woff'),
-    url('fonts/timeline-voyage.svg?gezorn#timeline-voyage') format('svg');
+  src:  url('fonts/timeline-voyage.eot?fm6qbd');
+  src:  url('fonts/timeline-voyage.eot?fm6qbd#iefix') format('embedded-opentype'),
+    url('fonts/timeline-voyage.ttf?fm6qbd') format('truetype'),
+    url('fonts/timeline-voyage.woff?fm6qbd') format('woff'),
+    url('fonts/timeline-voyage.svg?fm6qbd#timeline-voyage') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
@@ -25,6 +25,9 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+.icon-search:before {
+  content: "\e903";
+}
 .icon-dashboard:before {
   content: "\e900";
 }
