Feat: designed cards and hover effects

--- a/src/app/components/molecules/event-card/event-card.component.html
+++ b/src/app/components/molecules/event-card/event-card.component.html
@@ -1,5 +1,5 @@
 <!-- year count -->
-<h6 class="text-center mb-4">2011</h6>
+<h6 class="year-text text-center mb-5">2011</h6>
 
 <!-- event cards -->
 <div class="event-card-grid">
