--- a/src/app/components/organisams/header/header.component.html
+++ b/src/app/components/organisams/header/header.component.html
@@ -1,7 +1,29 @@
 <header class="p-3">
   <div class="d-flex align-items-center justify-content-between gap-3">
     <h5 class="page-title mb-0">Timeline</h5>
-    <!-- Search bar -->
-    <app-search-bar class="flex-shrink-0"></app-search-bar>
+
+    <div class="d-flex align-items-center gap-3">
+      <!-- Search bar -->
+      <app-search-bar class="flex-shrink-0"></app-search-bar>
+
+      <!-- Dropdowns -->
+      <div>
+        <select class="form-select" aria-label="Filter">
+          <option selected>Filter Timeline</option>
+          <option value="1">One</option>
+          <option value="2">Two</option>
+          <option value="3">Three</option>
+        </select>
+      </div>
+
+      <div>
+        <select class="form-select" aria-label="Filter">
+          <option selected>Filter Range</option>
+          <option value="1">One</option>
+          <option value="2">Two</option>
+          <option value="3">Three</option>
+        </select>
+      </div>
+    </div>
   </div>
 </header>
