--- a/src/styles.scss
+++ b/src/styles.scss
@@ -38,6 +38,11 @@ $card-spacer-y: $card-spacer-x;
 
 $event-primary: #ff5907;
 
+// Modal
+$modal-content-bg: $component-bg;
+$modal-header-border-color: #0e0d0d;
+$modal-content-border-radius: $border-radius;
+
 // Custom styles goes here
 @import "../node_modules/bootstrap/scss/bootstrap.scss";
 
@@ -182,8 +187,15 @@ header {
       .card-title {
         color: $event-primary;
       }
+
       .card-text {
         color: $white;
+      }
+
+      .card-body {
+        &:after {
+          background-color: $event-primary;
+        }
       }
     }
 
@@ -279,5 +291,14 @@ header {
       width: 6px;
       height: 6px;
     }
+  }
+}
+
+// Event modal
+.modal {
+  background-color: rgba($color: #000000, $alpha: 0.8);
+
+  .modal-content {
+    overflow: hidden;
   }
 }
