--- a/src/app/components/organisams/time-interface/time-interface.component.html
+++ b/src/app/components/organisams/time-interface/time-interface.component.html
@@ -1,2 +1,3 @@
 <app-timeline (eventDetailsEvent)="openEventDetails($event)"></app-timeline>
 <app-event-details *ngIf="isEventDetailsOpen" (closeEvent)="isEventDetailsOpen=false" ></app-event-details>
+<app-event-list-overlay></app-event-list-overlay>
