--- a/src/app/components/molecules/event-list-overlay/event-list-overlay.component.html
+++ b/src/app/components/molecules/event-list-overlay/event-list-overlay.component.html
@@ -1,6 +1,7 @@
 <div
   class="offcanvas offcanvas-end"
   tabindex="-1"
+  data-bs-backdrop="static"
   id="offcanvasRight"
   aria-labelledby="offcanvasRightLabel"
 >
@@ -13,5 +14,7 @@
       aria-label="Close"
     ></button>
   </div>
-  <div class="offcanvas-body">...</div>
+  <div class="offcanvas-body">
+    <app-event-card></app-event-card>
+  </div>
 </div>
