--- a/src/styles.scss
+++ b/src/styles.scss
@@ -43,6 +43,9 @@ $modal-content-bg: $component-bg;
 $modal-header-border-color: #0e0d0d;
 $modal-content-border-radius: $border-radius;
 
+// Offcanvas
+$offcanvas-bg-color: $component-bg;
+$offcanvas-horizontal-width: 250px;
 // Custom styles goes here
 @import "../node_modules/bootstrap/scss/bootstrap.scss";
 
@@ -313,4 +316,21 @@ header {
     padding: 0.15rem 0.25rem;
     font-size: 11px;
   }
+}
+
+// Offcanvas
+app-event-list-overlay {
+  display: block;
+  background-color: rgba($color: #000000, $alpha: 0.8);
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  border: 0;
+  width: 100%;
+  height: 100%;
+}
+.offcanvas.offcanvas-end {
+  visibility: visible;
+  transform: translate(0);
 }
