--- a/src/app/components/templates/time-voyage/time-voyage.component.html
+++ b/src/app/components/templates/time-voyage/time-voyage.component.html
@@ -1,4 +1,16 @@
 <div class="d-flex flex-column h-100 overflow-hidden">
   <app-headers></app-headers>
-  <app-time-interface class="d-block flex-grow-1 overflow-horizontal p-3"></app-time-interface>
+
+  <!-- Start: Zoom In/Out Button -->
+  <div class="d-flex justify-content-end px-3">
+    <div class="btn-group" role="group" aria-label="Basic example">
+      <button type="button" class="btn btn-dark">-</button>
+      <button type="button" class="btn btn-dark">+</button>
+    </div>
+  </div>
+  <!-- End: Zoom In/Out Button -->
+
+  <app-time-interface
+    class="d-block flex-grow-1 overflow-horizontal p-3"
+  ></app-time-interface>
 </div>
