--- a/src/app/components/molecules/event-card/event-card.component.html
+++ b/src/app/components/molecules/event-card/event-card.component.html
@@ -1,14 +1,28 @@
 <!-- Year count -->
-<h6 class="year-text text-center mb-5">2011</h6>
+<h6 class="year-text text-center mb-5">
+  {{ year }}
+  <!-- <span class="" *ngIf="yearPresentInBetweenTheTimeline.length"> (*)</span> -->
+</h6>
 
 <!-- Show more button -->
 <div class="show-more">
-  <button class="btn btn-sm btn-dark">Show More</button>
+  <button
+    class="btn btn-sm btn-dark"
+    *ngIf="
+      (events && events.length > 3) || yearPresentInBetweenTheTimeline.length
+    "
+  >
+    Show More
+  </button>
 </div>
 
 <!-- Event cards -->
-<div class="event-card-grid" >
-  <div class="card" *ngFor="let event of events" (click)="openEventDetails(event)">
+<div class="event-card-grid">
+  <div
+    class="card"
+    *ngFor="let event of events"
+    (click)="openEventDetails(event)"
+  >
     <figure class="mb-0">
       <img
         src="{{ event.image }}"
