--- a/src/app/components/organisams/side-bar/side-bar.component.html
+++ b/src/app/components/organisams/side-bar/side-bar.component.html
@@ -1,6 +1,9 @@
 <aside class="d-flex flex-column h-100 overflow-hidden">
   <!-- App Title -->
-  <h5 class="app-title mb-0">TimeVoyage</h5>
+  <h5 class="app-title d-flex gap-2 mb-0">
+    <img src="../../../../assets/images/logo.svg" alt="Logo">
+    <span>TimeVoyage</span>
+  </h5>
 
   <!-- Menus -->
   <ul class="menu-list">
