--- a/src/app/components/templates/to-do/to-do.component.html
+++ b/src/app/components/templates/to-do/to-do.component.html
@@ -1,1 +1,7 @@
-<p>to-do works!</p>
+<div class="p-3 h-100">
+    <div class="content-wrapper h-100 rounded d-flex align-items-center justify-content-center">
+        <h2 class="mb-0">
+            Under Development, Comming Soon!!!
+        </h2>
+    </div>
+</div>
