--- a/src/app/components/organisams/event-list-overlay/event-list-overlay.component.html
+++ b/src/app/components/organisams/event-list-overlay/event-list-overlay.component.html
@@ -15,6 +15,6 @@
     ></button>
   </div>
   <div class="offcanvas-body">
-    <app-event-card></app-event-card>
+    <app-event-card [showMoreEventList]="eventList"></app-event-card>
   </div>
 </div>
