--- a/src/app/components/organisams/event-list-overlay/event-list-overlay.component.html
+++ b/src/app/components/organisams/event-list-overlay/event-list-overlay.component.html
@@ -6,12 +6,13 @@
   aria-labelledby="offcanvasRightLabel"
 >
   <div class="offcanvas-header">
-    <h5 class="offcanvas-title" id="offcanvasRightLabel">Offcanvas right</h5>
+    <h5 class="offcanvas-title" id="offcanvasRightLabel">{{ title }}</h5>
     <button
       type="button"
       class="btn-close"
       data-bs-dismiss="offcanvas"
       aria-label="Close"
+      (click)="closeOverlay()"
     ></button>
   </div>
   <div class="offcanvas-body">
