implemented search functionality for year

--- a/src/app/components/atoms/search-bar/search-bar.component.html
+++ b/src/app/components/atoms/search-bar/search-bar.component.html
@@ -1,9 +1,9 @@
 <div class="search-bar">
   <input
-    type="search"
+    [type]="inputType"
     class="form-control"
     id="searchVoyage"
-    placeholder="Search Here"
+    [placeholder]="placeholder"
     [(ngModel)]="searchValue"
     (ngModelChange)="onSearchTextChange($event)"
   />
