Implement responsive behaviour

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <div class="d-flex vh-100 overflow-hidden">
+  <input type="checkbox" id="sidebarToggle" class="d-none">
   <app-side-bar class="primary-sidebar"></app-side-bar>
   <main class="flex-grow-1 overflow-hidden">
     <router-outlet></router-outlet>
