--- a/src/app/components/molecules/event-card/event-card.component.html
+++ b/src/app/components/molecules/event-card/event-card.component.html
@@ -1,7 +1,7 @@
 <!-- Year count -->
 <h6 class="year-text text-center mb-5">
   {{ year }}
-  <span class="" *ngIf="yearPresentInBetweenTheTimeline.length"> (*)</span>
+  <span *ngIf="yearPresentInBetweenTheTimeline.length"> (*)</span>
 </h6>
 
 <!-- Show more button -->
