--- a/src/app/components/organisams/header/header.component.html
+++ b/src/app/components/organisams/header/header.component.html
@@ -2,9 +2,17 @@
   <div
     class="d-flex align-items-center justify-content-between flex-wrap gap-3"
   >
-    <h5 class="page-title mb-0">Timeline</h5>
+    <div class="d-flex align-items-center gap-2">
+      <img src="../../../../assets/images/logo.svg" class="d-lg-none" alt="Logo" />
+      <!-- Menu -->
+      <label for="sidebarToggle" class="toggle-menu d-flex mb-0">
+        <span class="icon icon-menu"></span>
+      </label>
+      <!-- Page title -->
+      <h5 class="page-title mb-0">Timeline</h5>
+    </div>
 
-    <div class="d-flex align-items-center flex-wrap gap-3">
+    <div class="d-none d-lg-flex align-items-center flex-wrap gap-3">
       <!-- Search bar -->
       <app-search-bar
         class="flex-shrink-0"
