--- a/src/app/components/organisams/event-list-overlay/event-list-overlay.component.html
+++ b/src/app/components/organisams/event-list-overlay/event-list-overlay.component.html
@@ -9,7 +9,7 @@
     <h5 class="offcanvas-title" id="offcanvasRightLabel">{{ title }}</h5>
     <button
       type="button"
-      class="btn-close"
+      class="btn-close bg-white"
       data-bs-dismiss="offcanvas"
       aria-label="Close"
       (click)="closeOverlay()"
