Style: Implemented dark/light theme

--- a/src/app/components/organisams/side-bar/side-bar.component.html
+++ b/src/app/components/organisams/side-bar/side-bar.component.html
@@ -22,4 +22,8 @@
       </a>
     </li>
   </ul>
+
+  <div class="flex-shrink-0 p-3 text-center">
+    <button class="btn btn-toggle" (click)="toggleTheme()">Toggle Theme</button>
+  </div>
 </aside>
