--- a/src/styles.scss
+++ b/src/styles.scss
@@ -46,9 +46,35 @@ $modal-content-border-radius: $border-radius;
 // Offcanvas
 $offcanvas-bg-color: $component-bg;
 $offcanvas-horizontal-width: 250px;
+
 // Custom styles goes here
 @import "../node_modules/bootstrap/scss/bootstrap.scss";
+:root,
+[data-bs-theme="dark"] {
+  --bs-body-bg: #0d1117;
+  --bs-body-color: #b7b7b7;
+  --component-bg: #14171f;
+  --component-focus-bg: #02050e;
+  --timeline-line-bg: #3d3d3d;
+  --bs-card-bg: #14171f;
+  --card-hover-text-color: #ffffff;
+  --bs-btn-color: #ffffff;
+  --bs-btn-border-color: --bs-btn-color;
+}
 
+[data-bs-theme="light"] {
+  --bs-body-bg: #ffffff;
+  --bs-body-color: #6a6a6a;
+  --component-bg: #eeeeee;
+  --component-focus-bg: #f2f2f2;
+  --dark: #eeeeee;
+  --timeline-line-bg: #b9b9b9;  
+  --bs-card-bg: #eeeeee;
+  --bs-secondary-color: #6a6a6a;
+  --card-hover-text-color: #3a3a3a;
+  --bs-btn-color: --bs-body-color;
+  --bs-btn-border-color: --bs-btn-color;
+}
 // Global styles
 html,
 body {
@@ -62,7 +88,8 @@ body {
 }
 
 .content-wrapper {
-  background-color: $component-bg;
+  transition: 0.4s all;
+  background-color: var(--component-bg);
 }
 
 // remove arrows from input
@@ -96,7 +123,7 @@ input[type="number"]::-webkit-outer-spin-button {
   height: 100%;
   flex: 0 0 250px;
   max-width: 250px;
-  background-color: $component-bg;
+  background-color: var(--component-bg);
   border-top-right-radius: 2 * $border-radius;
   border-bottom-right-radius: 2 * $border-radius;
   box-shadow: $box-shadow;
@@ -118,7 +145,7 @@ input[type="number"]::-webkit-outer-spin-button {
       font-size: 1.5rem;
       cursor: pointer;
       span {
-        color: #b7b7b7;
+        color: var(--bs-body-color);
       }
     }
   }
@@ -142,7 +169,7 @@ input[type="number"]::-webkit-outer-spin-button {
     }
     &-item {
       padding: 12px 10px;
-      background-color: #0d1117;
+      background-color: var(--bs-body-bg);
       border-radius: $border-radius;
       cursor: pointer;
       transition: 0.4s all;
@@ -160,7 +187,7 @@ input[type="number"]::-webkit-outer-spin-button {
       display: flex;
       align-items: center;
       gap: 0.5rem;
-      color: $body-color;
+      color: var(--bs-body-color);
     }
 
     &-icon {
@@ -177,6 +204,7 @@ input[type="number"]::-webkit-outer-spin-button {
     width: 180px;
     padding: 0.375rem 2.5rem 0.375rem 0.75rem;
     transition: 0.4s width;
+    background-color: var(--component-bg);
 
     // &:focus {
     //   width: 400px;
@@ -189,6 +217,36 @@ input[type="number"]::-webkit-outer-spin-button {
     right: 14px;
   }
 }
+
+// Form Controls
+.form-select,
+.form-control {
+  background-color: var(--component-bg);
+
+  &:focus {
+    background-color: var(--component-focus-bg);
+  }
+}
+
+// Modal
+.modal {
+  --bs-modal-bg: var(--component-bg);
+  --bs-modal-footer-border-color: var(--timeline-line-bg);
+}
+
+// Offcanvas
+.offcanvas {
+  --bs-offcanvas-bg: var(--component-bg);
+}
+
+// btn
+.btn-dark {
+  --bs-btn-bg: var(--component-bg);
+  --bs-btn-border-color: none;
+  --bs-btn-color: var(--bs-btn-color);
+  --bs-btn-hover-bg: #5051f9;
+}
+
 // titles
 .app-title {
   font-size: 22px;
@@ -202,7 +260,7 @@ input[type="number"]::-webkit-outer-spin-button {
 }
 .page-title {
   font-size: 22px;
-  color: $white;
+  color: var(--bs-body-color);
 }
 
 // Header styles goes here
@@ -230,12 +288,13 @@ header {
   min-width: var(--event-card-grid-min-width);
   max-width: var(--event-card-grid-max-width);
   // animation: fadeInOut 0.4s ease-in-out;
+  opacity: 1;
+  transition: 0.4s all; 
   &.fade {
     animation: fadeInOut 0.4s ease-in-out;
   }
-  opacity: 1;
-  transition: 0.4s all;
   .card {
+    --bs-card-bg: var(--component-bg);
     border: none;
     box-shadow: $box-shadow;
     transition: 0.4s all;
@@ -255,7 +314,7 @@ header {
       }
 
       .card-text {
-        color: $white;
+        color: var(--card-hover-text-color);
       }
 
       .card-body {
@@ -345,7 +404,7 @@ header {
       content: "";
       position: absolute;
       top: 40px;
-      background-color: #3d3d3d;
+      background-color: var(--timeline-line-bg);
       transition: 0.4s all;
     }
 
