--- a/src/assets/icons/style.css
+++ b/src/assets/icons/style.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'timeline-voyage';
-  src:  url('fonts/timeline-voyage.eot?f6fvt7');
-  src:  url('fonts/timeline-voyage.eot?f6fvt7#iefix') format('embedded-opentype'),
-    url('fonts/timeline-voyage.ttf?f6fvt7') format('truetype'),
-    url('fonts/timeline-voyage.woff?f6fvt7') format('woff'),
-    url('fonts/timeline-voyage.svg?f6fvt7#timeline-voyage') format('svg');
+  src:  url('fonts/timeline-voyage.eot?coau8h');
+  src:  url('fonts/timeline-voyage.eot?coau8h#iefix') format('embedded-opentype'),
+    url('fonts/timeline-voyage.ttf?coau8h') format('truetype'),
+    url('fonts/timeline-voyage.woff?coau8h') format('woff'),
+    url('fonts/timeline-voyage.svg?coau8h#timeline-voyage') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
@@ -25,6 +25,12 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+.icon-moon:before {
+  content: "\e906";
+}
+.icon-sun:before {
+  content: "\e907";
+}
 .icon-filter:before {
   content: "\e905";
 }
